# rules_file

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel  files.bazel  test.bazelrc
bazel/: rules.bzl
buildifier/: BUILD.bazel  buildifier.bzl  rules.bzl  workspace.bzl
buildifier/default/: BUILD.bazel
file/: BUILD.bazel  directory.py  find-packages-runner.sh.tpl  providers.bzl  rules.bzl  workspace.bzl
file/deleted-packages/src/: __main__.py
file/find-packages/: BUILD.bazel
file/find-packages/src/: __main__.py
file/find-packages/src/rulesfile/findpackages/: __main__.py  find_packages.py
file/test/bazel/: .bazelrc  WORKSPACE.bazel
generate/: BUILD.bazel  rules.bzl  runner.bzl  runner.sh.tpl
generate/args/: BUILD.bazel
generate/args/src/rulesfile/generateargs/: main.py
generate/run/src/rulesfile/generaterun/: check.py  main.py  write.py
git/: changed_files.BUILD.bazel  changed_files.bzl.tpl  workspace.bzl
jsonschema/: BUILD.bazel  jsonschema.BUILD.bazel  jsonschema.bzl  rules.bzl  workspace.bzl
rules/: init.bzl
tools/: BUILD.bazel  bazel  deleted_packages.bazelrc
