load(":rules.bzl", "buildifier")

buildifier(
    name = "buildifier",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "macos_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
    toolchain = "//buildifier/default:darwin_arm64",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "macos_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
    toolchain = "//buildifier/default:darwin_amd64",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "linux_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    toolchain = "//buildifier/default:linux_arm64",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "linux_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = "//buildifier/default:linux_amd64",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "windows_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    toolchain = "//buildifier/default:windows_amd64",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "src_toolchain",
    toolchain = "//buildifier/default:src",
    toolchain_type = ":toolchain_type",
)
