load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_binary")
load(":rules.bzl", "all_filter")

package(default_visibility = ["//visibility:public"])

exports_files([
    "deleted-packages-diff.sh.tpl",
    "deleted-packages-gen.sh.tpl",
    "find-packages-runner.sh.tpl",
])

all_filter(
    name = "all_filter",
)

bzl_library(
    name = "bzl",
    srcs = glob(["**/*.bzl"]),
)

py_binary(
    name = "directory",
    srcs = ["directory.py"],
)
