toolchain_type(
    name = "toolchain_type"
)

toolchain(
    name = "linux_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = "@jsonschema_linux_x86_64//:toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "linux_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    toolchain = "@jsonschema_linux_arm64//:toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "macos_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
    toolchain = "@jsonschema_darwin_x86_64//:toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "macos_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
    toolchain = "@jsonschema_darwin_arm64//:toolchain",
    toolchain_type = ":toolchain_type",
)
