load("//black:rules.bzl", "configure_black")
load("//file:rules.bzl", "bazelrc_deleted_packages", "find_packages")
load("//generate:rules.bzl", "format", "generate", "generate_test", "multi_generate")
load("//jsonschema:rules.bzl", "jsonschema_validator")

configure_black(
    name = "black",
    options = ["-C"],
)

format(
    name = "black_format",
    srcs = ["@files//:black_files"],
    formatter = ":black",
    strip_prefix = "/files",
)

multi_generate(
    name = "format",
    deps = [
        ":black_format",
        ":buildifier_format",
        ":github_workflow_validate",
    ],
)

generate_test(
    name = "format_test",
    generate = ":format",
)

format(
    name = "buildifier_format",
    srcs = ["@files//:buildifier_files"],
    formatter = "//buildifier",
    strip_prefix = "/files",
)

jsonschema_validator(
    name = "github_workflow_validator",
    schema = "@schemastore_github_workflow//file",
)

format(
    name = "github_workflow_validate",
    srcs = ["@files//:github_workflow_files"],
    formatter = ":github_workflow_validator",
    strip_prefix = "/files",
)

find_packages(
    name = "test_packages",
    roots = [
        "file/test/bazel",
    ],
)

bazelrc_deleted_packages(
    name = "bazelrc",
    output = "deleted_packages.bazelrc",
    packages = [
        ":test_packages",
        "@files//:packages",
    ],
)
