load("//buildifier:buildifier.bzl", "BUILDIFIER_REPO_NAMES")
load("//buildifier:rules.bzl", "buildifier_toolchain")

[
    buildifier_toolchain(
        name = name,
        buildifier = "@buildifier_%s//file" % name,
        visibility = ["//visibility:public"],
    )
    for name in BUILDIFIER_REPO_NAMES
]

buildifier_toolchain(
    name = "src",
    buildifier = "@com_github_bazelbuild_buildtools//buildifier",
    visibility = ["//visibility:public"],
)
